# vachat-server

./: .gitignore  Cargo.toml  README.md
cert/: create.sh
config/: cargo.toml  change_log.txt  config.toml  version.json
crates/msgdb/src/: db.rs  messages.rs
crates/token/: Cargo.toml
crates/token/src/: lib.rs
docs/: README.md  book.toml  spec.md
docs/manuals/: SUMMARY.md  build.md  cc-connect.md  https.md  install.md  introduction.md  manual.md  nginx.md
docs/manuals/agents/: hermes.md  index.md  nanobot.md  openclaw.md  qwenpaw.md
docs/theme/: custom.css
migrations/: 001_initial.up.sql
src/: api_key.rs  config.rs  create_user.rs  main.rs  password.rs  self_signed.rs  server.rs  state.rs  test_harness.rs
src/api/: admin_login.rs  admin_system.rs  admin_user.rs  archive.rs  favorite.rs  group.rs  message.rs  message_api.rs  mod.rs  resource.rs  tags.rs  token.rs  user.rs
src/api/matrix/: account.rs  auth.rs  keys.rs  media.rs  mod.rs  rooms.rs  sync.rs  to_device.rs
src/api/matrix/e2ee/: device_keys.rs  megolm_session.rs  mod.rs  olm_session.rs  room_encryption.rs  server_olm_account.rs  types.rs
