[package]
name = "vachat-server"
version = "0.2.0"
edition = "2021"
license = "MIT"

[dependencies]
rc-msgdb = { path = "./crates/msgdb" }
rc-token = { path = "./crates/token" }

poem = { version = "1.3.51", features = [
    "rustls",
    "sse",
    "static-files",
    "test",
    "i18n",
    "anyhow",
    "acme",
    'tokio-metrics',
    "compression",
] }
poem-openapi = { version = "2.0.23", features = [
    "rapidoc",
    "swagger-ui",
    "redoc",
    "chrono",
    "email",
    "static-files",
] }
serde = { version = "1.0.132", features = ["derive"] }
tokio = { version = "1.17.0", features = [
    "macros",
    "rt-multi-thread",
    "sync",
    "fs",
    "time",
] }
toml = "0.5.8"
tracing = "0.1.29"
tracing-subscriber = { version = "0.3.3", features = ["env-filter"] }
tracing-appender = "0.2"
serde_json = "1.0.73"
parking_lot = "0.11.2"
sqlx = { version = "0.5.9", features = [
    "sqlite",
    "runtime-tokio-rustls",
    "chrono",
    "json",
] }
itertools = "0.10.3"
futures-util = "0.3.19"
async-stream = "0.3.2"
image = "0.24.2"
uuid = { version = "1", features = ["v4"] }
rcgen = { version = "0.8.14", features = ["x509-parser"] }
tokio-stream = "0.1.8"
num_enum = "0.5.5"
unic-langid = "0.9.0"
reqwest = { version = "0.11.8", default-features = false, features = [
    "rustls-tls",
    "json",
] }
fastrand = "1.7.0"
hmac = "0.11.0"
sha2 = "0.9.0"
regex = "1.5.4"
openidconnect = "2.4.0"
#openidconnect = { git = "https://github.com/sunli829/openidconnect-rs", rev = "efd006c" }
bytes = "1.1.0"
rand = "0.8"
clap = { version = "3.1.6", features = ["derive"] }
walkdir = "2.3.2"
base64 = "0.22"
zip = { version = "0.6.0", default-features = false, features = ["deflate"] }
mime_guess = "2.0.4"
url = "2"
percent-encoding = "2"
once_cell = "1.13.0"
chrono = { version = "0.4.19", features = ["serde"] }
anyhow = "1.0.51"
hex = "0.4.3"
md-5 = "0.10"
envy = "0.4.2"
tokio-tungstenite = "0.17.2"

# E2EE dependencies
vodozemac = "0.5"

[target.'cfg(not(windows))'.dependencies]
libc = "0.2"

[workspace]
members = [
    "crates/msgdb",
    "crates/token",
]

[dev-dependencies]
reqwest = { version = "0.11.8", default-features = false, features = [
    "rustls-tls",
] }
tempfile = "3.2.0"
